Fixed scrollbar

--- a/src/globals.css
+++ b/src/globals.css
@@ -3,23 +3,19 @@
 @tailwind utilities;
 
 @layer base {
-  * {
-    scrollbar-width: thin;
-    scrollbar-color: #7ed957;
-  }
-
+ 
   /* Chrome, Edge, and Safari */
-  *::-webkit-scrollbar {
+  ::-webkit-scrollbar {
     width: 8px;
     height: 8px;
   }
 
-  *::-webkit-scrollbar-track {
+  ::-webkit-scrollbar-track {
     background: #7ed95734;
     opacity: 0.5;
   }
 
-  *::-webkit-scrollbar-thumb {
+  ::-webkit-scrollbar-thumb {
     background-color: #7ed957;
     border: 3px solid #7ed957;
   }
